--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <p>Email: zachpacello7@gmail.com</p>
     <a href = "https://www.linkedin.com/in/zachary-pacello-a64390207/">Linkedin page</a>
     <footer class = "footer12">Zachary Pacello, UNC Charlotte, Computer Science</footer>
+    <style>
      .topnav {
     overflow: hidden;
     background-color:#ddd;
@@ -215,4 +216,4 @@
 h2{
     padding-top: 15px;
 }
-
+</style>
